deployment/ge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
  labels: 
    app: rest
spec:
  selector:
    app: rest
  ports:
  - name: rest
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
