deployment/ge-ingress.yaml
 
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: rest-svc
          servicePort: 8080
